added sfc-channel value telemetry delivery, to quickly check in the control plane what data and what values are read.
